tests/fail/invalid_name.stderr
error: expected `rate`
 --> tests/fail/invalid_name.rs:9:45
  |
9 |     let _wave = sine_wave!(frequency: 8000, invalid: 5000);
  |                                             ^^^^^^^
